--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.cucumber.tuts</groupId>
 	<artifactId>cucmber</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>cucmber</name>
 	<url>http://maven.apache.org</url>
