--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,39 @@
 	<groupId>com.cucumber.tuts</groupId>
 	<artifactId>cucmber</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-
 	<name>cucmber</name>
 	<url>http://maven.apache.org</url>
+	<packaging>pom</packaging>
+<!--here-->	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+					<source>8</source>
+					<target>8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<includes>
+						<exclude>**/*TestRunner.java</exclude>
+					</includes>
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+	</build>
+	
+	<!--to here-->
+
+	
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,11 +51,11 @@
 			<version>3.8.1</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.14.3</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
