--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 				<version>3.2.5</version>
 				<configuration>
 					<includes>
-						<exclude>**/*TestRunner.java</exclude>
+						<include>**/*TestRunner.java</include>
 					</includes>
 				</configuration>
 			</plugin>
