--- a/pom.xml
+++ b/pom.xml
@@ -6,64 +6,10 @@
 	<groupId>com.cucumber.tuts</groupId>
 	<artifactId>cucmber</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+
 	<name>cucmber</name>
 	<url>http://maven.apache.org</url>
-	<packaging>pom</packaging>
-	<!--here-->
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
-				<configuration>
-					<source>8</source>
-					<target>8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.5</version>
-				<configuration>
-					<includes>
-						<exclude>**/*TestRunner.java</exclude>
-					</includes>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>io.cucumber</groupId>
-				<artifactId>cucumber-maven-plugin</artifactId>
-				<version>6.9.1</version>
-				<executions>
-					<execution>
-						<id>execution</id>
-						<phase>test</phase>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<tags>@login and (@valid or @invalid)</tags> <!-- Run
-							tests tagged with specified tags -->
-							<glue>com.cucumber.tuts.cucmber.StepDefinitions</glue> <!--
-							Specify package containing step definitions -->
-							<plugin>pretty</plugin>
-							<plugin>html:target/cucumber-reports</plugin> <!--
-							Generate HTML reports in target/cucumber-reports -->
-							<plugin>json:target/cucumber-reports/Cucumber.json</plugin> <!--
-							Generate JSON reports in target/cucumber-reports -->
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-		</plugins>
-
-	</build>
-
-	<!--to here-->
-
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -76,11 +22,11 @@
 			<version>3.8.1</version>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.14.3</version>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
